<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_main"
    tools:context=".ChaptersActivity">

    <TextView
        android:id="@+id/chapters_header_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/monof55"
        android:paddingHorizontal="15dp"
        android:paddingTop="5dp"
        android:text="@string/app_list_accessible_events"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/list_events_scrollview"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chapters_header_textview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/chapter_1_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/dark_medium"
                app:cardBackgroundColor="@color/dark_medium"
                app:cardCornerRadius="25dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ch1_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monof55"
                            android:gravity="top"
                            android:text="@string/stage1_booting_up"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monof55"
                            android:gravity="top"
                            android:text="@string/stage1_description"
                            android:textColor="@color/grey"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/chapter_2_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/dark_medium"
                app:cardBackgroundColor="@color/dark_medium"
                app:cardCornerRadius="25dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ch3_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monof55"
                            android:gravity="top"
                            android:text="@string/stage2_first_contact"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monof55"
                            android:gravity="top"
                            android:text="@string/stage2_description"
                            android:textColor="@color/grey"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/chapter_3_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/dark_medium"
                app:cardBackgroundColor="@color/dark_medium"
                app:cardCornerRadius="25dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ch2_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monof55"
                            android:gravity="top"
                            android:text="@string/stage3_mutual_aid"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monof55"
                            android:gravity="top"
                            android:text="@string/stage3_description"
                            android:textColor="@color/grey"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/chapter_4_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/dark_medium"
                app:cardBackgroundColor="@color/dark_medium"
                app:cardCornerRadius="25dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:src="@drawable/ch4_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monof55"
                            android:gravity="top"
                            android:text="А ЧЕ ТЫ СЮДА ПОЛЕЗ"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/monof55"
                            android:gravity="top"
                            android:text="АААААААААА?"
                            android:textColor="@color/grey"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/terminal_cardview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/dark_medium"
        app:cardCornerRadius="25dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/command_cardview"
        app:layout_constraintTop_toBottomOf="@+id/list_events_scrollview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monof55"
                android:paddingTop="10dp"
                android:text="@string/chapters_terminal_name"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="30sp" />

            <ScrollView
                android:id="@+id/terminal_scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/terminal_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monof55"
                    android:text="@string/terminal_first_message"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

            </ScrollView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/command_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/dark_medium"
        app:cardBackgroundColor="@color/dark_medium"
        app:cardCornerRadius="25dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/monof55"
                android:gravity="center"
                android:text="@string/user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/command_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/dark_medium"
                android:digits=" 1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_абвгдеёжзийклмнопрстуфхцчшщьъыэюяАБВГДЕЁДЗИЙКЛМНОПРСТУФХЧШЩЬЪЫЮЯ"
                android:fontFamily="@font/monof55"
                android:hint="@string/type_command"
                android:maxLength="30"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/command_apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/dark_light"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@android:drawable/ic_menu_send" />


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>