<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_main"
    tools:context=".MenuActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/eye_card"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="250dp"
        app:cardBackgroundColor="@color/dark_light"
        app:cardCornerRadius="90dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toTopOf="@+id/menu_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_eye_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/eye_frame" />

        <ImageView
            android:id="@+id/icon_eye_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="35dp"
            android:src="@drawable/eye_inner" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eye_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monof55"
            android:text="By"
            android:textColor="@color/blood_text"
            android:textSize="45sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monof55"
            android:text="Stander"
            android:textColor="@color/white"
            android:textSize="45sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/menu_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/dark_light"
            app:cardCornerRadius="50dp"
            app:cardElevation="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:fontFamily="@font/monof55"
                android:text="@string/menu_activity_start_textview"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/dark_light"
            app:cardCornerRadius="50dp"
            app:cardElevation="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:fontFamily="@font/monof55"
                android:text="@string/menu_activity_config_textview"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/dark_light"
            app:cardCornerRadius="50dp"
            app:cardElevation="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:fontFamily="@font/monof55"
                android:text="@string/menu_activity_info_textview"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/developer_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark_medium"
        app:cardCornerRadius="45dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_part_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/monof55"
                android:text="Cros"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/name_part_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/monof55"
                android:text="ska"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>